--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <!-- Hero and Nav -->
       <section id="Nav-hero" class="relative">
         <!-- Nav -->
-        <nav id="navigation" class="w-screen bg-transparent duration-500 absolute flex items-center justify-between z-50 top-0 left-[50%] translate-x-[-50%] cursor-pointer md:px-12 px-4 py-4">
+        <nav id="navigation" class="w-screen bg-transparent duration-500 absolute flex items-center justify-between z-50 top-0 left-[50%] translate-x-[-50%] cursor-pointer md:px-12 px-8 py-4">
           <!-- Hamberger parent -->
           <div class="flex-1">
             <!-- Hamberger icon -->
@@ -49,16 +49,16 @@
               <!-- Grid First-col & First-Row -->
               <div class="flex flex-col">
                 <h4 class="font-bold text-xl text-basecolor">Accounts</h4>
-                <a href="" class="font-semibold">Savings</a>
-                <a href="" class="font-semibold">Current</a>
-                <a href="" class="font-semibold">Deposits</a>
+                <a href="#" class="font-semibold">Savings</a>
+                <a href="#" class="font-semibold">Current</a>
+                <a href="#" class="font-semibold">Deposits</a>
               </div>
               <!-- Grid Second-col & First-Row -->
               <div class="flex flex-col">
                 <h4 class="font-bold text-xl text-basecolor">Cards</h4>
-                <a href="" class="font-semibold">Classic Visa Debit Card</a>
-                <a href="" class="font-semibold">Gold Visa Debit Card</a>
-                <a href="" class="font-semibold">Platinum Visa Card</a>
+                <a href="#" class="font-semibold">Classic Visa Debit Card</a>
+                <a href="#" class="font-semibold">Gold Visa Debit Card</a>
+                <a href="#" class="font-semibold">Platinum Visa Card</a>
               </div>
               <!-- Grid Third-col & First-Row -->
               <div class="row-span-4 flex flex-col justify-center items-center border-l-2 px-4">
@@ -67,26 +67,25 @@
               <!-- Grid First-col & Second-Row -->
               <div class="flex flex-col">
                 <h4 class="font-bold text-xl text-basecolor">Loans</h4>
-                <a href="" class="font-semibold">Personal Loan</a>
-                <a href="" class="font-semibold">Business Loan</a>
+                <a href="#" class="font-semibold">Personal Loan</a>
+                <a href="#" class="font-semibold">Business Loan</a>
               </div>
               <!-- Grid second-col & Second-Row -->
               <div class="flex flex-col">
-                <h4 class="font-bold text-xl text-basecolor">Guarantee</h4>
-                <a href="" class="font-semibold">Employee</a>
-                <a href="" class="font-semibold">Commercial</a>
+                <h4 class="font-bold text-xl text-basecolor">Guarantees</h4>
+                <a href="#" class="font-semibold">Employee</a>
+                <a href="#" class="font-semibold">Commercial</a>
               </div>
               <!-- Grid First-col & Third-Row -->
               <div class="flex flex-col">
                 <h4 class="font-bold text-xl text-basecolor">Services</h4>
-                <a href="" class="font-semibold">WPS</a>
-                <a href="" class="font-semibold">Remittance</a>
+                <a href="#" class="font-semibold">WPS</a>
+                <a href="#" class="font-semibold">Remittance</a>
               </div>
               <!-- Grid Second-col & Third-Row -->
               <div class="flex flex-col">
                 <h4 class="font-bold text-xl text-basecolor">About Us</h4>
                 <a href="#" class="font-semibold">Corporate Governance</a>
-                <a href="#" class="font-semibold">Our Brunches</a>
                 <a href="#" class="font-semibold">Awards</a>
               </div>
             </div>
@@ -94,19 +93,19 @@
             <a href="#" class="font-bold text-xl text-basecolor">Contact Us</a>
           </div>
           <!-- Mobile Menu -->
-          <div class="flex flex-col justify-center items-start">
+          <div class="lg:hidden flex flex-col justify-center items-start">
             <!-- Account Section Child & Heading and Icon -->
             <div class="w-full">
               <!-- Account section Heading and Icon -->
               <div class="flex justify-between items-center" id="accountSection">
-                <a href="#" class="font-bold text-lg text-basecolor">Account</a>
+                <a href="#" class="font-bold text-lg text-basecolor">Accounts</a>
                 <i class="bi bi-plus-circle-fill text-basecolor font-bold text-xl cursor-pointer"></i>
               </div>
               <!-- Account section child -->
               <div class="max-h-96 flex flex-col gap-3 translate-y-0 duration-300 py-3" id="accountChild">
-                <a href="" class="font-semibold">Savings</a>
-                <a href="" class="font-semibold">Current</a>
-                <a href="" class="font-semibold">Deposits</a>              
+                <a href="#" class="font-semibold">Savings</a>
+                <a href="#" class="font-semibold">Current</a>
+                <a href="#" class="font-semibold">Deposits</a>              
               </div>
             </div>
             <!-- Loan Section Child & Heading and Icon -->
@@ -118,8 +117,68 @@
               </div>
               <!-- Account section child -->
               <div class="max-h-96 flex flex-col gap-3 translate-y-0 duration-300 py-3 hideSection" id="loanChild">
-                <a href="" class="font-semibold">Personal Loan</a>
-                <a href="" class="font-semibold">Business Loan</a>           
+                <a href="#" class="font-semibold">Personal Loan</a>
+                <a href="#" class="font-semibold">Business Loan</a>           
+              </div>
+            </div>
+            <!-- Card Section Child & Heading and Icon -->
+            <div class="w-full">
+              <!-- Account section Heading and Icon -->
+              <div class="flex justify-between items-center" id="cardSection">
+                <a href="#" class="font-bold text-lg text-basecolor">Cards</a>
+                <i class="bi bi-plus-circle-fill text-basecolor font-bold text-xl cursor-pointer"></i>
+              </div>
+              <!-- Account section child -->
+              <div class="max-h-96 flex flex-col gap-3 translate-y-0 duration-300 py-3 hideSection" id="cardChild">
+                <a href="#" class="font-semibold">Classic visa Debit Card</a>
+                <a href="#" class="font-semibold">Gold visa Debit Card</a>
+                <a href="#" class="font-semibold">Business visa Loan</a>
+              </div>
+            </div>
+            <!-- Guarantee Section Child & Heading and Icon -->
+            <div class="w-full">
+              <!-- Account section Heading and Icon -->
+              <div class="flex justify-between items-center" id="guaranteeSection">
+                <a href="#" class="font-bold text-lg text-basecolor">Guarantees</a>
+                <i class="bi bi-plus-circle-fill text-basecolor font-bold text-xl cursor-pointer"></i>
+              </div>
+              <!-- Account section child -->
+              <div class="max-h-96 flex flex-col gap-3 translate-y-0 duration-300 py-3 hideSection" id="guaranteeChild">
+                <a href="#" class="font-semibold">Employee Guarantee</a>
+                <a href="#" class="font-semibold">Commercial Guarantee</a>
+              </div>
+            </div>
+            <!-- Services Section Child & Heading and Icon -->
+            <div class="w-full">
+              <!-- Account section Heading and Icon -->
+              <div class="flex justify-between items-center" id="servicesSection">
+                <a href="#" class="font-bold text-lg text-basecolor">Services</a>
+                <i class="bi bi-plus-circle-fill text-basecolor font-bold text-xl cursor-pointer"></i>
+              </div>
+              <!-- Account section child -->
+              <div class="max-h-96 flex flex-col gap-3 translate-y-0 duration-300 py-3 hideSection" id="servicesChild">
+                <a href="#" class="font-semibold">WPS</a>
+                <a href="#" class="font-semibold">Remittance</a>
+              </div>
+            </div>
+            <!-- About us Section Child & Heading and Icon -->
+            <div class="w-full">
+              <!-- Account section Heading and Icon -->
+              <div class="flex justify-between items-center" id="aboutSection">
+                <a href="#" class="font-bold text-lg text-basecolor">About Us</a>
+                <i class="bi bi-plus-circle-fill text-basecolor font-bold text-xl cursor-pointer"></i>
+              </div>
+              <!-- Account section child -->
+              <div class="max-h-96 flex flex-col gap-3 translate-y-0 duration-300 py-3 hideSection" id="aboutChild">
+                <a href="#" class="font-semibold">Corporate Governance</a>
+                <a href="#" class="font-semibold">Awards</a>
+              </div>
+            </div>
+            <!-- Contact us Section Child & Heading and Icon -->
+            <div class="w-full">
+              <!-- Account section Heading and Icon -->
+              <div class="flex justify-between items-center" id="aboutSection">
+                <a href="#" class="font-bold text-lg text-basecolor">Contact Us</a>
               </div>
             </div>
           </div>
@@ -130,7 +189,7 @@
           <!-- Branch & ATM Location for Desktop -->
           <div class="hidden lg:flex flex-col">
             <!-- Branch Location Grid Heading for Desktop-->
-            <h4 class="font-bold text-2xl text-basecolor">Branch Location</h4>
+            <h4 class="font-bold text-2xl text-basecolor cursor-pointer">Branch Location</h4>
             <!-- Branch Location Grid for Desktop-->
             <div class="hidden lg:grid grid-cols-2 grid-rows-2 items-start border-b-2 gap-2 py-6">
               <!-- Grid First-col & Second-Row -->
@@ -159,7 +218,7 @@
               </div>
             </div>
             <!-- ATM Location Grid Heading -->
-            <h4 class="font-bold text-2xl text-basecolor mt-2">ATM Location</h4>
+            <h4 class="font-bold text-2xl text-basecolor cursor-pointer mt-2">ATM Location</h4>
             <!-- ATM Location Grid -->
             <div class="hidden lg:grid grid-cols-2 grid-rows-2 items-start gap-2 py-6">
               <!-- Grid First-col & Second-Row -->
@@ -187,9 +246,9 @@
           <!-- Branch & ATM Location Heading for Mobile -->
           <div class="lg:hidden flex justify-between items-center gap-4">
             <!-- Branch Location Heading-->
-            <h4 class="font-bold text-xl text-basecolor" id="branchForMob">Branch Location</h4>
+            <h4 class="w-full font-bold lg:text-xl text-lg text-basecolor cursor-pointer border-r-4 border-basecolor" id="branchForMob">Branch Location</h4>
             <!-- Branch Location Heading-->
-            <h4 class="font-bold text-xl text-slate-500" id="ATMForMob">ATM Location</h4>
+            <h4 class="w-full font-bold lg:text-xl text-lg text-slate-500 cursor-pointer" id="ATMForMob">ATM Location</h4>
           </div>
           <!-- Branch & ATM List for Mobile -->
           <div class="lg:hidden">
@@ -199,48 +258,48 @@
               <div class="flex flex-col">
                 <h4 class="font-bold text-basecolor">Abu Dhabi</h4>
                 <p class="font-semibold text-sm">Ground Floor, Al Saman Tower, Beside Capital Park, Plot C-7, Sector E-8, Hamdan Street</p>
-                <a href="#" class="text-basecolor text-xs">view on map</a>
+                <a href="#" class="text-basecolor font-semibold text-sm">view on map</a>
               </div>
               <!-- Branch List 2 -->
               <div class="flex flex-col">
                 <h4 class="font-bold text-basecolor">Dubai</h4>
                 <p class="font-semibold text-sm">Ground Floor, Rolex Tower/Deira Twin Tower, Baniyas Road, Deira</p>
-                <a href="#" class="text-basecolor text-xs">view on map</a>
+                <a href="#" class="text-basecolor font-semibold text-sm">view on map</a>
               </div>
               <!--  Branch List 3 -->
               <div class="flex flex-col">
                 <h4 class="font-bold text-basecolor">Al Ain</h4>
                 <p class="font-semibold text-sm">Sk. Khalifa Bin Mohd., Al-Nahyan Building, Main Market Centre, Main Street</p>
-                <a href="#" class="text-basecolor text-xs">view on map</a>
+                <a href="#" class="text-basecolor font-semibold text-sm">view on map</a>
               </div>
               <!--  Branch List 4 -->
               <div class="flex flex-col">
                 <h4 class="font-bold text-basecolor">Sharjah</h4>
                 <p class="font-semibold text-sm">Sheikha Mahra Building, Al Khaleej Square, Opp.Swissbel(Ex-Rotana) Hotel, Arabian Guld Street, Al Mujarrah</p>
-                <a href="#" class="text-basecolor text-xs">view on map</a>
+                <a href="#" class="text-basecolor font-semibold text-sm">view on map</a>
               </div>
             </div>
             <!-- ATM List for Mobile -->
             <div class="hidden flex-col items-start gap-4 py-6" id="ATMMobList">
-              <!-- Abu Dhabi ATM Location Div -->
-              <div class="flex flex-col">
-                <h4 class="font-bold text-xl text-slate-500">Abu Dhabi</h4>
-                <a href="#" class="text-basecolor">view on map</a>
+              <!-- Abu Dhabi ATM Location 1 -->
+              <div class="flex flex-col cursor-pointer">
+                <h4 class="font-bold text-lg text-slate-500">Abu Dhabi</h4>
+                <a href="#" class="text-basecolor font-semibold text-sm">view on map</a>
               </div>
-              <!-- Dubai ATM Location Div -->
-              <div class="flex flex-col">
-                <h4 class="font-bold text-xl text-slate-500">Dubai</h4>
-                <a href="#" class="text-basecolor">view on map</a>
+              <!-- Dubai ATM Location 2 -->
+              <div class="flex flex-col cursor-pointer">
+                <h4 class="font-bold text-lg text-slate-500">Dubai</h4>
+                <a href="#" class="text-basecolor font-semibold text-sm">view on map</a>
               </div>
-              <!-- Al Ain ATM Location Div -->
-              <div class="flex flex-col">
-                <h4 class="font-bold text-xl text-slate-500">Al Ain</h4>
-                <a href="#" class="text-basecolor" >view on map</a>
+              <!-- Al Ain ATM Location 3 -->
+              <div class="flex flex-col cursor-pointer">
+                <h4 class="font-bold text-lg text-slate-500">Al Ain</h4>
+                <a href="#" class="text-basecolor font-semibold text-sm" >view on map</a>
               </div>
-              <!-- Sharjah ATM Location Div -->
-              <div class="flex flex-col">
-                <h4 class="font-bold text-xl text-slate-500">Sharjah</h4>
-                <a href="#" class="text-basecolor">view on map</a>
+              <!-- Sharjah ATM Location 4 -->
+              <div class="flex flex-col cursor-pointer">
+                <h4 class="font-bold text-lg text-slate-500">Sharjah</h4>
+                <a href="#" class="text-basecolor font-semibold text-sm">view on map</a>
               </div> 
             </div>
           </div>
