Change nav icon size

--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
       <!-- Hero and Nav -->
       <section id="Nav-hero" class="relative">
         <!-- Nav -->
-        <nav id="navigation" class="w-screen bg-transparent duration-500 absolute flex items-center justify-between z-50 top-0 left-[50%] translate-x-[-50%] cursor-pointer md:px-12 px-8 py-4">
+        <nav id="navigation" class="w-screen bg-transparent duration-500 absolute flex items-center justify-between z-50 top-0 left-[50%] translate-x-[-50%] cursor-pointer md:px-12 px-4 py-4">
           <!-- Hamberger parent -->
           <div class="flex-1">
             <!-- Hamberger icon -->
-            <div class="block w-9 h-6 icon cursor-pointer z-20" id="hamberger-icon">
+            <div class="block w-8 h-6 icon cursor-pointer z-20" id="hamberger-icon">
               <span class="bar1"></span>
               <span class="bar2"></span>
               <span class="bar3"></span>
@@ -35,7 +35,7 @@
           <!-- Location & Internet Banking -->
           <div class="flex flex-1 justify-end items-center gap-8">
             <!-- Loaction Icon -->
-            <i class="fa-solid fa-location-dot text-3xl cursor-pointer location" id="location-icon"></i>
+            <i class="fa-solid fa-location-dot lg:text-3xl text-2xl cursor-pointer location" id="location-icon"></i>
             <!-- Internet Banking Button -->
             <button class="hidden md:block bg-basecolor text-white text-xs md:text-base font-medium py-2 px-4 rounded-lg hover:bg-white hover:text-basecolor border-2 border-basecolor duration-500">Internet Banking</button>
           </div>
